fix: java version 2